# lispy

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-Sample.json  LICENSE  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  bpt.yaml  build.yaml  builtin_8h.html  create-prelude.bat  create-prelude.sh  debug.yaml  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  hello.cly  index.html  io_8h.html  lenv_8h.html  lispy_8h.html  lval_8h.html  macros_8h.html  modules.html  namespaces.html  pages.html  parser_8h.html  prelude.cly  sample-std.md  searchdata-v1.js  structlenv.html  structlval.html  types_8h.html  utilities_8h.html  (+1 more)
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
example/: compose.cly
examples/: compose.cly  compose.lpy  compose.lx  fib.cly  fib.lpy  fib.lx
include/: builtin.h  builtins.h  curlyc.h  io.h  lenv.h  lispy.h  lix.h  lval.h  macros.h  parser.h  parsing.h  types.h  utilities.h  windows.h
src/: builtins.c  curly.main.c  io.c  lenv.c  lval.c  main.main.c  parser.c  parsing.c  parsing.main.c  utilities.c
src/lib/: builtin.c  builtins.c  io.c  lenv.c  lval.c  parser.c  utilities.c
src/lib/include/: builtins.h  io.h  lenv.h  lval.h  macros.h  types.h  utilities.h
src/lib/src/: builtins.c  io.c  lenv.c  lval.c  parsing.c  utilities.c  windows.c
stdlib/: prelude.lx
tests/: CMakeLists.txt
tests/src/: lispy_test.cxx
